# KeyboardAnalyzer

./: CMakeLists.txt
lib/keyboardWatcher/: CMakeLists.txt
lib/typingAnalyzer/: CMakeLists.txt  contentbuilder.cpp  contentbuilder.h  pageapplication.cpp  pageapplication.h  pagemanager.cpp  pagemanager.h  slidersetting.cpp
lib/typingAnalyzer/qml/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
